--- a/themes/bamboo/source/css/_partial/post.styl
+++ b/themes/bamboo/source/css/_partial/post.styl
@@ -139,6 +139,29 @@
     text-align: center;
   }
 
+  .academic-reference-list {
+    margin: 18px 0 0;
+    padding: 14px 16px;
+    border: 1px solid rgba(222, 231, 241, .95);
+    border-radius: 14px;
+    background: linear-gradient(180deg, rgba(252, 253, 255, .98) 0%, rgba(247, 249, 252, .98) 100%);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .75);
+  }
+
+  .academic-reference-list .reference-item {
+    margin: 0 0 10px;
+    padding-left: 2.2em;
+    text-indent: -2.2em;
+    font-size: 13px;
+    line-height: 1.82;
+    color: #46576a;
+    word-break: break-word;
+  }
+
+  .academic-reference-list .reference-item:last-child {
+    margin-bottom: 0;
+  }
+
   .gallery, .btns, .site-card {
     img {
       margin: 0;
